[gd_scene load_steps=2 format=3 uid="uid://dnmkt82f1l08v"]

[ext_resource type="Script" uid="uid://df02vkvjgv4os" path="res://menu.gd" id="1_lti8b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lti8b")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play	"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
